fixed js errors. added dark mode

--- a/missionStatement/missionStatemment.css
+++ b/missionStatement/missionStatemment.css
@@ -51,3 +51,11 @@ footer img{
     width: 150px;
     margin-top: 5em;
 }
+
+.dark{
+    background-color: #333;
+    color: white; 
+}
+.dark h2 {
+    color: #4F9ACF;
+}
